propellor (4.4.0) UNRELEASED; urgency=medium

  * Propellor.Property.Timezone: New module, contributed by Sean Whitton.
  * Propellor.Property.Sudo.enabledFor: Made revertable.
    (minor API change)

 -- Joey Hess <id@joeyh.name>  Sun, 16 Jul 2017 12:07:15 -0400

propellor (4.3.4) unstable; urgency=medium

  * Propellor.Property.Versioned: New module which allows different
    versions of a property or host to be written down in a propellor config
    file. Has many applications, including staged upgrades and rollbacks.
  * LightDM.autoLogin: Use [Seat:*] rather than the old [SeatDefaults].
    The new name has been supported since lightdm 1.15.

 -- Joey Hess <id@joeyh.name>  Sat, 15 Jul 2017 17:22:53 -0400

propellor (4.3.3) unstable; urgency=medium

  * Hosts can be configured to build propellor using stack, by adding
    a property:
        & bootstrapWith (Robustly Stack)
  * Hosts can be configured to build propellor using cabal, but using
    only packages installed from the operating system. This
    will work on eg Debian:
        & bootstrapWith OSOnly
  * Iproved fix for bug that sometimes made --spin fail with
    "fatal: Couldn't find remote ref HEAD". The previous fix didn't work
    reliably.
  * User: add systemGroup and use it for systemAccountFor'
    Thanks, Félix Sipma. 
  * Export a Restic.backup' property.
    Thanks, Félix Sipma. 
  * Updated stack config to lts-8.22.

 -- Joey Hess <id@joeyh.name>  Thu, 13 Jul 2017 12:34:09 -0400

propellor (4.3.2) unstable; urgency=medium

  * Really include Propellor.Property.FreeDesktop.

 -- Joey Hess <id@joeyh.name>  Thu, 06 Jul 2017 17:28:53 -0400

propellor (4.3.1) unstable; urgency=medium

  * Added Propellor.Property.FreeDesktop module.
  * Added reservedSpacePercentage to the PartSpec EDSL.

 -- Joey Hess <id@joeyh.name>  Thu, 06 Jul 2017 17:03:15 -0400

propellor (4.3.0) unstable; urgency=medium

  * DiskImage: Removed grubBooted; properties that used to need it as a