@@ -3,6 +3,9 @@ propellor (4.4.0) UNRELEASED; urgency=medium
   * Propellor.Property.Timezone: New module, contributed by Sean Whitton.
   * Propellor.Property.Sudo.enabledFor: Made revertable.
     (minor API change)
+  * Propellor.Property.LightDM.autoLogin: Made revertable.
+    (minor API change)
+  * Propellor.Property.Conffile: Added lacksIniSetting.
 
  -- Joey Hess <id@joeyh.name>  Sun, 16 Jul 2017 12:07:15 -0400
 
